                 more gracefully if libattr's headers are not present.

    - (richdawe) OpenBSD isn't supported, so bail gracefully
                 in Makefile.PL on that platform.

    - (richdawe) Make sure that the errno value from any failed
                 system calls is propagated into $! (#32679, #32680).

                 XXX: This is incomplete:
                 - Test on FreeBSD, Solaris, Mac OS X.
                 - Make sure I've actually addressed API concerns in #32670.

    - (richdawe) File::ExtAttr no longer generate noisy warnings
                 when an xattr system call fails. All error reporting
                 is now via the function return values and $!.

1.07 2007-12-15

    - (richdawe) Bugfix: When the attribute value was empty, getfattr()
                 returned garbage. Fixed. (Reported by Joe Stewart --
                 thanks!)

    - (richdawe) Change my contact details.

1.06 2007-11-04

    - (richdawe) Bugfix: Builds and works again on Mac OS X 10.4 (Tiger).

    - (richdawe) Fix typo in t/33nslong.t, which caused it to fail
                 on Mac OS X.

1.05 2007-08-13

    - (richdawe) Fix META.yml so that it's valid. Add a test using
      		 Test::YAML::Meta to the test suite, to validate META.yml.

    - (richdawe) Fix RT #27864: "Tests fail with nl_NL locale set".

    - (richdawe) Add test cases for setting attributes on directories,
                 by filename.

    - (richdawe) Bugfix: Fix a memory leak in getfattr(). The memory was
                 leaked when the function failed, e.g.: if it was called
                 with the name of a non-existent attribute.

1.04 2007-05-06

    - (richdawe) OpenBSD does not support extended attributes --
                 fail the build on OpenBSD; documentation updates.

    - (richdawe) Really fix build for NetBSD 3.x. Update the test suite
                 to skip tests on NetBSD 3.1 or earlier,
                 since NetBSD 4.0 is the first version to actually have